--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	</parent>
 	<groupId>guru.springframework</groupId>
 	<artifactId>sfg-pet-clinic</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.1-SNAPSHOT</version>
 	<name>sfg-pet-clinic</name>
 	<description>SFG Pet Clinic Project</description>
 
@@ -47,7 +47,7 @@
 	</build>
 
 	<scm>
-		<developerConnection>scm:git:git@github.com:himanshigarg/sfg-pet-clinic.git</developerConnection>
+		<developerConnection>scm:git:https://github.com/himanshigarg/sfg-pet-clinic.git</developerConnection>
 		<tag>sfg-pet-clinic-0.0.1</tag>
 	</scm>
 
