--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	</parent>
 	<groupId>guru.springframework</groupId>
 	<artifactId>sfg-pet-clinic</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.2</version>
 	<name>sfg-pet-clinic</name>
 	<description>SFG Pet Clinic Project</description>
 
@@ -48,7 +48,7 @@
 
 	<scm>
 		<developerConnection>scm:git:https://github.com/himanshigarg/sfg-pet-clinic.git</developerConnection>
-		<tag>HEAD</tag>
+		<tag>0.0.2</tag>
 	</scm>
 
 </project>
